# Copyright 2021-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

config = configuration_data()
config.set('ZIX_SRCDIR', zix_src_root)
config.set('DOX_OUTPUT', meson.current_build_dir() / '..')

doxyfile = configure_file(
  configuration: config,
  input: files('../Doxyfile.in'),
  output: 'Doxyfile',
)

doxygen_xml = custom_target(
  'index.xml',
  command: [doxygen, '@INPUT0@'],
  input: [doxyfile] + c_headers,
  output: [
    'index.xml',

    'allocator_8h.xml',
    'attributes_8h.xml',
    'btree_8h.xml',
    'bump__allocator_8h.xml',
    'digest_8h.xml',
    'environment_8h.xml',
    'filesystem_8h.xml',
    'group__bump__allocator.xml',
    'group__zix.xml',
    'group__zix__algorithms.xml',
    'group__zix__allocation.xml',
    'group__zix__allocator.xml',
    'group__zix__attributes.xml',
    'group__zix__btree.xml',
    'group__zix__btree__iteration.xml',
    'group__zix__btree__modification.xml',
    'group__zix__btree__searching.xml',
    'group__zix__btree__setup.xml',
    'group__zix__data__structures.xml',
    'group__zix__digest.xml',
    'group__zix__environment.xml',
    'group__zix__expand.xml',
    'group__zix__file__system.xml',
    'group__zix__fs__access.xml',
    'group__zix__fs__creation.xml',
    'group__zix__fs__environment.xml',
    'group__zix__fs__locking.xml',
    'group__zix__fs__ops.xml',
    'group__zix__fs__queries.xml',
    'group__zix__fs__resolution.xml',
    'group__zix__hash.xml',
    'group__zix__hash__datatypes.xml',
    'group__zix__hash__iteration.xml',
    'group__zix__hash__modification.xml',
    'group__zix__hash__searching.xml',
    'group__zix__hash__setup.xml',
    'group__zix__path.xml',
    'group__zix__path__concatenation.xml',
    'group__zix__path__decomposition.xml',
    'group__zix__path__lexical.xml',
    'group__zix__path__queries.xml',
    'group__zix__ring.xml',
    'group__zix__ring__read.xml',
    'group__zix__ring__setup.xml',
    'group__zix__ring__write.xml',
    'group__zix__sem.xml',
    'group__zix__status.xml',
    'group__zix__string__view.xml',
    'group__zix__thread.xml',
    'group__zix__threading.xml',
    'group__zix__tree.xml',
    'group__zix__tree__iteration.xml',
    'group__zix__tree__modification.xml',
    'group__zix__tree__searching.xml',
    'group__zix__tree__setup.xml',
    'group__zix__utilities.xml',
    'hash_8h.xml',
    'path_8h.xml',
    'ring_8h.xml',
    'sem_8h.xml',
    'status_8h.xml',
    'string__view_8h.xml',
    'structZixAllocatorImpl.xml',
    'structZixBTreeIter.xml',
    'structZixBumpAllocator.xml',
    'structZixHashInsertPlan.xml',
    'structZixRingTransaction.xml',
    'structZixStringView.xml',
    'thread_8h.xml',
    'tree_8h.xml',
    'zix_8h.xml',
  ],
)
